# timao-douyin-live-manager

./: .cz.toml  .dockerignore  .env  .env.backup.root.20251113_195848  .env.example  .env.local  .gitattributes  .gitignore  .port.json  .pre-commit-config.yaml  .skip-template  .user.ini  0.12.1  4.14.1  5.0  =1.11.0  =4.14.1  AGENTS.md  AI_COST_GUILD_VERSION.md  AI_GATEWAY_API_KEY_MANAGEMENT.md  AI_GATEWAY_GUIDE.md  AI_GATEWAY_INTEGRATION.md  AI_GATEWAY_SIMPLE.md  AI_GATEWAY_SUMMARY.md  AI_USAGE_MONITOR_README.md  AI模型分级使用策略.md  AI网关修复报告.md  AI网关讯飞集成总结.md  API_CONTRACT.md  AST_README.md  AST_dual_test.html  AST_local_test.html  AST_test_page.html  AST_单元测试使用指南.md  AUDIO_ENHANCEMENT_USAGE.md  BIG_FILES_MANAGEMENT.md  BIG_FILES_MANAGEMENT_SUMMARY.md  BUG_FIX_TEST.md  CHANGELOG.md  CHANGELOG_URL_REFRESH.md  (+255 more)
.claude/: settings.local.json
.codex/: config.toml
AI _IDE_rule/: Qoder_md.mdc
AST_module/: DEPRECATED_README.md  README.md  README_SenseVoice.md  __init__.py  acrcloud_client.py  adaptive_threshold_controller.py  ast_design.md  ast_service.py  audio_capture.py  audio_preprocessor_enhanced.py  confidence_calculator_enhanced.py  config.py  config_manager.py  demo_final_acceptance_report_20250920_213655.txt  demo_real_vosk.py  emotional_analyzer_enhanced.py  enhanced_ast_service.py  enhanced_transcription_result.py  final_acceptance_test.py  integration_test_framework.py  mock_transcription.py  mock_vosk_service.py  optimization_report_20250920_213346.txt  performance_benchmark.py  performance_optimizer.py  postprocess.py  quick_final_demo.py  requirements.txt  run_tests.py  sensevoice_service.py  sherpa_service.py  simple_test.py  test_adaptive_threshold.py  test_audio_preprocessor.py  test_integration.py  (+14 more)
(+1476 files in other folders)
